sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:10: error: not found: value w
      w = getValue(j-1);
      ^AlgInsertionSort:11: error: not found: value w
      if (w > v) {
          ^AlgInsertionSort:12: error: not found: value w
        setValue(j, w);
                    ^